syntax = "proto3";

option java_multiple_files = true;
option java_package = "light";
option java_outer_classname = "LightServiceImpl";

package light;

service LightService {

    rpc switchPower(PowerRequest) returns (PowerResponse) {}

    rpc changeBrightness(stream BrightnessRequest) returns (BrightnessResponse) {} 

}

message PowerRequest {
    bool switch = 1;
}

message PowerResponse {
    bool switch = 1;
}

message BrightnessRequest {
    int32 brightness = 1;
}

message BrightnessResponse {
    int32 brightness = 1;
}